Add Statistics test